# itaxeasy-apk-back

./: .env.example  .gitignore  README.md  alembic.ini  dev_start.sh  dev_stop.sh  docker-compose.dev.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: a1b2c3d4e5f6_initial_migration.py  b2c3d4e5f6a7_business_settings.py  c3d4e5f6a7b8_msg91_otp.py  d4e5f6a7b8c9_business_address.py
app/: main.py  models.py
app/api/: deps.py
app/api/auth/: router.py  schemas.py  service.py
app/api/business/: router.py  schemas.py  service.py
app/core/: config.py  database.py  firebase.py  msg91.py
dev/: start.sh  stop.sh
scripts/: deploy.sh
