[tool.poetry]
name = "itaxeasy-apk-backend"
version = "0.1.0"
description = "FastAPI Python Backend for iTaxEasy Mobile APK (Phase 1)"
authors = ["iTaxEasy Team <info@itaxeasy.com>"]
package-mode = false
requires-poetry = "==2.2.1"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = "^0.47.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.14.1"
email-validator = "^2.1.0"
python-dotenv = "^1.2.2"
sqlalchemy = "^2.0.49"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}
firebase-admin = "^7.0.0"
psycopg2-binary = "^2.9.12"
python-multipart = "^0.0.29"
greenlet = "^3.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.13"
black = "^26.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
